Compiladores/yacc-codigo/y.output
Terminals unused in grammar

   TK_OPER


State 48 conflicts: 1 shift/reduce, 1 reduce/reduce


Grammar

    0 $accept: S $end

    1 S: CMDS

    2 CMDS: CMDS CMD ';'
    3     | CMD ';'

    4 CMD: DECLVAR
    5    | ENTRADA
    6    | SAIDA
    7    | ATR
    8    | FOR
    9    | IF

   10 DECLVAR: TK_VAR VARS

   11 VARS: VARS ',' VAR
   12     | VAR

   13 VAR: TK_ID '[' CINT ']'
   14    | TK_ID '[' CINT ']' '[' CINT ']'
   15    | TK_ID '[' CINT ']' '[' CINT ']' '[' CINT ']'
   16    | TK_ID

   17 ENTRADA: TK_CONSOLE ENTRADA_EXT

   18 ENTRADA_EXT: TK_SHIFTR TK_ID
   19            | TK_SHIFTR TK_ID '[' E ']'
   20            | TK_SHIFTR TK_ID '[' E ']' '[' E ']'
   21            | TK_SHIFTR TK_ID '[' E ']' '[' E ']' '[' E ']'
   22            | TK_SHIFTR TK_ID ENTRADA_EXT
   23            | TK_SHIFTR TK_ID '[' E ']' ENTRADA_EXT
   24            | TK_SHIFTR TK_ID '[' E ']' '[' E ']' ENTRADA_EXT
   25            | TK_SHIFTR TK_ID '[' E ']' '[' E ']' '[' E ']' ENTRADA_EXT

   26 SAIDA: TK_CONSOLE SAIDA_EXT

   27 SAIDA_EXT: TK_SHIFTL TK_STR
   28          | TK_SHIFTL E
   29          | TK_SHIFTL TK_ENDL
   30          | TK_SHIFTL TK_STR SAIDA_EXT
   31          | TK_SHIFTL E SAIDA_EXT
   32          | TK_SHIFTL TK_ENDL SAIDA_EXT

   33 FOR: TK_FOR TK_ID TK_IN '[' E TK_2PT E ']' BLK
   34    | TK_FOR TK_ID TK_IN '[' E TK_2PT E ']' CMD

   35 IF: TK_ELSE BLK
   36   | TK_ELSE CMD
   37   | TK_IF E TK_THEN BLK ';' error
   38   | TK_IF E TK_THEN CMD
   39   | TK_IF E TK_THEN BLK TK_ELSE BLK

   40 BLK: TK_BEGIN CMDS TK_END
   41    | TK_BEGIN TK_END

   42 ATR: TK_ID '=' E
   43    | TK_ID '[' E ']' '=' E
   44    | TK_ID '[' E ']' '[' E ']' '=' E
   45    | TK_ID '[' E ']' '[' E ']' '[' E ']' '=' E

   46 E: E '+' E
   47  | E '-' E
   48  | E '*' E
   49  | E '/' E
   50  | E '%' E
   51  | TK_UN_NOT E
   52  | E TK_CMP E
   53  | E TK_CMP_AND E
   54  | E TK_CMP_OR E
   55  | V

   56 V: TK_ID '[' E ']'
   57  | TK_ID '[' E ']' '[' E ']'
   58  | TK_ID '[' E ']' '[' E ']' '[' E ']'
   59  | TK_ID
   60  | CINT
   61  | CDOUBLE
   62  | CCHAR
   63  | TK_STR
   64  | TK_TRUE
   65  | TK_FALSE
   66  | '(' E ')'


Terminals, with rules where they appear

$end (0) 0
'%' (37) 50
'(' (40) 66
')' (41) 66
'*' (42) 48
'+' (43) 46
',' (44) 11
'-' (45) 47
'/' (47) 49
';' (59) 2 3 37
'=' (61) 42 43 44 45
'[' (91) 13 14 15 19 20 21 23 24 25 33 34 43 44 45 56 57 58
']' (93) 13 14 15 19 20 21 23 24 25 33 34 43 44 45 56 57 58
error (256) 37
CINT (258) 13 14 15 60
CDOUBLE (259) 61
TK_ID (260) 13 14 15 16 18 19 20 21 22 23 24 25 33 34 42 43 44 45 56
    57 58 59
TK_VAR (261) 10
TK_CONSOLE (262) 17 26
TK_SHIFTR (263) 18 19 20 21 22 23 24 25
TK_SHIFTL (264) 27 28 29 30 31 32
TK_TRUE (265) 64
TK_FALSE (266) 65
TK_FOR (267) 33 34
TK_IN (268) 33 34
TK_2PT (269) 33 34
TK_IF (270) 37 38 39
TK_THEN (271) 37 38 39
TK_ELSE (272) 35 36 39
TK_STR (273) 27 30 63
TK_ENDL (274) 29 32
CCHAR (275) 62
TK_CMP (276) 52
TK_CMP_OR (277) 54
TK_CMP_AND (278) 53
TK_UN_NOT (279) 51
TK_END (280) 40 41
TK_BEGIN (281) 40 41
TK_OPER (282)


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
S (41)
    on left: 1, on right: 0
CMDS (42)
    on left: 2 3, on right: 1 2 40
CMD (43)
    on left: 4 5 6 7 8 9, on right: 2 3 34 36 38
DECLVAR (44)
    on left: 10, on right: 4
VARS (45)
    on left: 11 12, on right: 10 11
VAR (46)
    on left: 13 14 15 16, on right: 11 12
ENTRADA (47)
    on left: 17, on right: 5
ENTRADA_EXT (48)
    on left: 18 19 20 21 22 23 24 25, on right: 17 22 23 24 25
SAIDA (49)
    on left: 26, on right: 6
SAIDA_EXT (50)
    on left: 27 28 29 30 31 32, on right: 26 30 31 32
FOR (51)
    on left: 33 34, on right: 8
IF (52)
    on left: 35 36 37 38 39, on right: 9
BLK (53)
    on left: 40 41, on right: 33 35 37 39
ATR (54)
    on left: 42 43 44 45, on right: 7
E (55)
    on left: 46 47 48 49 50 51 52 53 54 55, on right: 19 20 21 23 24
    25 28 31 33 34 37 38 39 42 43 44 45 46 47 48 49 50 51 52 53 54
    56 57 58 66
V (56)
    on left: 56 57 58 59 60 61 62 63 64 65 66, on right: 55


State 0

    0 $accept: . S $end

    TK_ID       shift, and go to state 1
    TK_VAR      shift, and go to state 2
    TK_CONSOLE  shift, and go to state 3
    TK_FOR      shift, and go to state 4
    TK_IF       shift, and go to state 5
    TK_ELSE     shift, and go to state 6

    S        go to state 7
    CMDS     go to state 8
    CMD      go to state 9
    DECLVAR  go to state 10
    ENTRADA  go to state 11
    SAIDA    go to state 12
    FOR      go to state 13
    IF       go to state 14
    ATR      go to state 15


State 1

   42 ATR: TK_ID . '=' E
   43    | TK_ID . '[' E ']' '=' E
   44    | TK_ID . '[' E ']' '[' E ']' '=' E
   45    | TK_ID . '[' E ']' '[' E ']' '[' E ']' '=' E

    '['  shift, and go to state 16
    '='  shift, and go to state 17


State 2

   10 DECLVAR: TK_VAR . VARS

    TK_ID  shift, and go to state 18

    VARS  go to state 19
    VAR   go to state 20


State 3

   17 ENTRADA: TK_CONSOLE . ENTRADA_EXT
   26 SAIDA: TK_CONSOLE . SAIDA_EXT

    TK_SHIFTR  shift, and go to state 21
    TK_SHIFTL  shift, and go to state 22

    ENTRADA_EXT  go to state 23
    SAIDA_EXT    go to state 24


State 4

   33 FOR: TK_FOR . TK_ID TK_IN '[' E TK_2PT E ']' BLK
   34    | TK_FOR . TK_ID TK_IN '[' E TK_2PT E ']' CMD

    TK_ID  shift, and go to state 25


State 5

   37 IF: TK_IF . E TK_THEN BLK ';' error
   38   | TK_IF . E TK_THEN CMD
   39   | TK_IF . E TK_THEN BLK TK_ELSE BLK

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 35
    V  go to state 36


State 6

   35 IF: TK_ELSE . BLK
   36   | TK_ELSE . CMD

    TK_ID       shift, and go to state 1
    TK_VAR      shift, and go to state 2
    TK_CONSOLE  shift, and go to state 3
    TK_FOR      shift, and go to state 4
    TK_IF       shift, and go to state 5
    TK_ELSE     shift, and go to state 6
    TK_BEGIN    shift, and go to state 37

    CMD      go to state 38
    DECLVAR  go to state 10
    ENTRADA  go to state 11
    SAIDA    go to state 12
    FOR      go to state 13
    IF       go to state 14
    BLK      go to state 39
    ATR      go to state 15


State 7

    0 $accept: S . $end

    $end  shift, and go to state 40


State 8

    1 S: CMDS .
    2 CMDS: CMDS . CMD ';'

    TK_ID       shift, and go to state 1
    TK_VAR      shift, and go to state 2
    TK_CONSOLE  shift, and go to state 3
    TK_FOR      shift, and go to state 4
    TK_IF       shift, and go to state 5
    TK_ELSE     shift, and go to state 6

    $default  reduce using rule 1 (S)

    CMD      go to state 41
    DECLVAR  go to state 10
    ENTRADA  go to state 11
    SAIDA    go to state 12
    FOR      go to state 13
    IF       go to state 14
    ATR      go to state 15


State 9

    3 CMDS: CMD . ';'

    ';'  shift, and go to state 42


State 10

    4 CMD: DECLVAR .

    $default  reduce using rule 4 (CMD)


State 11

    5 CMD: ENTRADA .

    $default  reduce using rule 5 (CMD)


State 12

    6 CMD: SAIDA .

    $default  reduce using rule 6 (CMD)


State 13

    8 CMD: FOR .

    $default  reduce using rule 8 (CMD)


State 14

    9 CMD: IF .

    $default  reduce using rule 9 (CMD)


State 15

    7 CMD: ATR .

    $default  reduce using rule 7 (CMD)


State 16

   43 ATR: TK_ID '[' . E ']' '=' E
   44    | TK_ID '[' . E ']' '[' E ']' '=' E
   45    | TK_ID '[' . E ']' '[' E ']' '[' E ']' '=' E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 43
    V  go to state 36


State 17

   42 ATR: TK_ID '=' . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 44
    V  go to state 36


State 18

   13 VAR: TK_ID . '[' CINT ']'
   14    | TK_ID . '[' CINT ']' '[' CINT ']'
   15    | TK_ID . '[' CINT ']' '[' CINT ']' '[' CINT ']'
   16    | TK_ID .

    '['  shift, and go to state 45

    $default  reduce using rule 16 (VAR)


State 19

   10 DECLVAR: TK_VAR VARS .
   11 VARS: VARS . ',' VAR

    ','  shift, and go to state 46

    $default  reduce using rule 10 (DECLVAR)


State 20

   12 VARS: VAR .

    $default  reduce using rule 12 (VARS)


State 21

   18 ENTRADA_EXT: TK_SHIFTR . TK_ID
   19            | TK_SHIFTR . TK_ID '[' E ']'
   20            | TK_SHIFTR . TK_ID '[' E ']' '[' E ']'
   21            | TK_SHIFTR . TK_ID '[' E ']' '[' E ']' '[' E ']'
   22            | TK_SHIFTR . TK_ID ENTRADA_EXT
   23            | TK_SHIFTR . TK_ID '[' E ']' ENTRADA_EXT
   24            | TK_SHIFTR . TK_ID '[' E ']' '[' E ']' ENTRADA_EXT
   25            | TK_SHIFTR . TK_ID '[' E ']' '[' E ']' '[' E ']' ENTRADA_EXT

    TK_ID  shift, and go to state 47


State 22

   27 SAIDA_EXT: TK_SHIFTL . TK_STR
   28          | TK_SHIFTL . E
   29          | TK_SHIFTL . TK_ENDL
   30          | TK_SHIFTL . TK_STR SAIDA_EXT
   31          | TK_SHIFTL . E SAIDA_EXT
   32          | TK_SHIFTL . TK_ENDL SAIDA_EXT

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 48
    TK_ENDL    shift, and go to state 49
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 50
    V  go to state 36


State 23

   17 ENTRADA: TK_CONSOLE ENTRADA_EXT .

    $default  reduce using rule 17 (ENTRADA)


State 24

   26 SAIDA: TK_CONSOLE SAIDA_EXT .

    $default  reduce using rule 26 (SAIDA)


State 25

   33 FOR: TK_FOR TK_ID . TK_IN '[' E TK_2PT E ']' BLK
   34    | TK_FOR TK_ID . TK_IN '[' E TK_2PT E ']' CMD

    TK_IN  shift, and go to state 51


State 26

   60 V: CINT .

    $default  reduce using rule 60 (V)


State 27

   61 V: CDOUBLE .

    $default  reduce using rule 61 (V)


State 28

   56 V: TK_ID . '[' E ']'
   57  | TK_ID . '[' E ']' '[' E ']'
   58  | TK_ID . '[' E ']' '[' E ']' '[' E ']'
   59  | TK_ID .

    '['  shift, and go to state 52

    $default  reduce using rule 59 (V)


State 29

   64 V: TK_TRUE .

    $default  reduce using rule 64 (V)


State 30

   65 V: TK_FALSE .

    $default  reduce using rule 65 (V)


State 31

   63 V: TK_STR .

    $default  reduce using rule 63 (V)


State 32

   62 V: CCHAR .

    $default  reduce using rule 62 (V)


State 33

   51 E: TK_UN_NOT . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 53
    V  go to state 36


State 34

   66 V: '(' . E ')'

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 54
    V  go to state 36


State 35

   37 IF: TK_IF E . TK_THEN BLK ';' error
   38   | TK_IF E . TK_THEN CMD
   39   | TK_IF E . TK_THEN BLK TK_ELSE BLK
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E

    TK_THEN     shift, and go to state 55
    TK_CMP      shift, and go to state 56
    TK_CMP_OR   shift, and go to state 57
    TK_CMP_AND  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    '%'         shift, and go to state 63


State 36

   55 E: V .

    $default  reduce using rule 55 (E)


State 37

   40 BLK: TK_BEGIN . CMDS TK_END
   41    | TK_BEGIN . TK_END

    TK_ID       shift, and go to state 1
    TK_VAR      shift, and go to state 2
    TK_CONSOLE  shift, and go to state 3
    TK_FOR      shift, and go to state 4
    TK_IF       shift, and go to state 5
    TK_ELSE     shift, and go to state 6
    TK_END      shift, and go to state 64

    CMDS     go to state 65
    CMD      go to state 9
    DECLVAR  go to state 10
    ENTRADA  go to state 11
    SAIDA    go to state 12
    FOR      go to state 13
    IF       go to state 14
    ATR      go to state 15


State 38

   36 IF: TK_ELSE CMD .

    $default  reduce using rule 36 (IF)


State 39

   35 IF: TK_ELSE BLK .

    $default  reduce using rule 35 (IF)


State 40

    0 $accept: S $end .

    $default  accept


State 41

    2 CMDS: CMDS CMD . ';'

    ';'  shift, and go to state 66


State 42

    3 CMDS: CMD ';' .

    $default  reduce using rule 3 (CMDS)


State 43

   43 ATR: TK_ID '[' E . ']' '=' E
   44    | TK_ID '[' E . ']' '[' E ']' '=' E
   45    | TK_ID '[' E . ']' '[' E ']' '[' E ']' '=' E
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E

    TK_CMP      shift, and go to state 56
    TK_CMP_OR   shift, and go to state 57
    TK_CMP_AND  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    '%'         shift, and go to state 63
    ']'         shift, and go to state 67


State 44

   42 ATR: TK_ID '=' E .
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E

    TK_CMP      shift, and go to state 56
    TK_CMP_OR   shift, and go to state 57
    TK_CMP_AND  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    '%'         shift, and go to state 63

    $default  reduce using rule 42 (ATR)


State 45

   13 VAR: TK_ID '[' . CINT ']'
   14    | TK_ID '[' . CINT ']' '[' CINT ']'
   15    | TK_ID '[' . CINT ']' '[' CINT ']' '[' CINT ']'

    CINT  shift, and go to state 68


State 46

   11 VARS: VARS ',' . VAR

    TK_ID  shift, and go to state 18

    VAR  go to state 69


State 47

   18 ENTRADA_EXT: TK_SHIFTR TK_ID .
   19            | TK_SHIFTR TK_ID . '[' E ']'
   20            | TK_SHIFTR TK_ID . '[' E ']' '[' E ']'
   21            | TK_SHIFTR TK_ID . '[' E ']' '[' E ']' '[' E ']'
   22            | TK_SHIFTR TK_ID . ENTRADA_EXT
   23            | TK_SHIFTR TK_ID . '[' E ']' ENTRADA_EXT
   24            | TK_SHIFTR TK_ID . '[' E ']' '[' E ']' ENTRADA_EXT
   25            | TK_SHIFTR TK_ID . '[' E ']' '[' E ']' '[' E ']' ENTRADA_EXT

    TK_SHIFTR  shift, and go to state 21
    '['        shift, and go to state 70

    $default  reduce using rule 18 (ENTRADA_EXT)

    ENTRADA_EXT  go to state 71


State 48

   27 SAIDA_EXT: TK_SHIFTL TK_STR .
   30          | TK_SHIFTL TK_STR . SAIDA_EXT
   63 V: TK_STR .

    TK_SHIFTL  shift, and go to state 22

    TK_SHIFTL  [reduce using rule 63 (V)]
    ';'        reduce using rule 27 (SAIDA_EXT)
    ';'        [reduce using rule 63 (V)]
    $default   reduce using rule 63 (V)

    SAIDA_EXT  go to state 72


State 49

   29 SAIDA_EXT: TK_SHIFTL TK_ENDL .
   32          | TK_SHIFTL TK_ENDL . SAIDA_EXT

    TK_SHIFTL  shift, and go to state 22

    $default  reduce using rule 29 (SAIDA_EXT)

    SAIDA_EXT  go to state 73


State 50

   28 SAIDA_EXT: TK_SHIFTL E .
   31          | TK_SHIFTL E . SAIDA_EXT
   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E

    TK_SHIFTL   shift, and go to state 22
    TK_CMP      shift, and go to state 56
    TK_CMP_OR   shift, and go to state 57
    TK_CMP_AND  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    '%'         shift, and go to state 63

    $default  reduce using rule 28 (SAIDA_EXT)

    SAIDA_EXT  go to state 74


State 51

   33 FOR: TK_FOR TK_ID TK_IN . '[' E TK_2PT E ']' BLK
   34    | TK_FOR TK_ID TK_IN . '[' E TK_2PT E ']' CMD

    '['  shift, and go to state 75


State 52

   56 V: TK_ID '[' . E ']'
   57  | TK_ID '[' . E ']' '[' E ']'
   58  | TK_ID '[' . E ']' '[' E ']' '[' E ']'

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 76
    V  go to state 36


State 53

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   51  | TK_UN_NOT E .
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E

    TK_CMP  shift, and go to state 56
    '+'     shift, and go to state 59
    '-'     shift, and go to state 60
    '*'     shift, and go to state 61
    '/'     shift, and go to state 62
    '%'     shift, and go to state 63

    $default  reduce using rule 51 (E)


State 54

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E
   66 V: '(' E . ')'

    TK_CMP      shift, and go to state 56
    TK_CMP_OR   shift, and go to state 57
    TK_CMP_AND  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    '%'         shift, and go to state 63
    ')'         shift, and go to state 77


State 55

   37 IF: TK_IF E TK_THEN . BLK ';' error
   38   | TK_IF E TK_THEN . CMD
   39   | TK_IF E TK_THEN . BLK TK_ELSE BLK

    TK_ID       shift, and go to state 1
    TK_VAR      shift, and go to state 2
    TK_CONSOLE  shift, and go to state 3
    TK_FOR      shift, and go to state 4
    TK_IF       shift, and go to state 5
    TK_ELSE     shift, and go to state 6
    TK_BEGIN    shift, and go to state 37

    CMD      go to state 78
    DECLVAR  go to state 10
    ENTRADA  go to state 11
    SAIDA    go to state 12
    FOR      go to state 13
    IF       go to state 14
    BLK      go to state 79
    ATR      go to state 15


State 56

   52 E: E TK_CMP . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 80
    V  go to state 36


State 57

   54 E: E TK_CMP_OR . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 81
    V  go to state 36


State 58

   53 E: E TK_CMP_AND . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 82
    V  go to state 36


State 59

   46 E: E '+' . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 83
    V  go to state 36


State 60

   47 E: E '-' . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 84
    V  go to state 36


State 61

   48 E: E '*' . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 85
    V  go to state 36


State 62

   49 E: E '/' . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 86
    V  go to state 36


State 63

   50 E: E '%' . E

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 87
    V  go to state 36


State 64

   41 BLK: TK_BEGIN TK_END .

    $default  reduce using rule 41 (BLK)


State 65

    2 CMDS: CMDS . CMD ';'
   40 BLK: TK_BEGIN CMDS . TK_END

    TK_ID       shift, and go to state 1
    TK_VAR      shift, and go to state 2
    TK_CONSOLE  shift, and go to state 3
    TK_FOR      shift, and go to state 4
    TK_IF       shift, and go to state 5
    TK_ELSE     shift, and go to state 6
    TK_END      shift, and go to state 88

    CMD      go to state 41
    DECLVAR  go to state 10
    ENTRADA  go to state 11
    SAIDA    go to state 12
    FOR      go to state 13
    IF       go to state 14
    ATR      go to state 15


State 66

    2 CMDS: CMDS CMD ';' .

    $default  reduce using rule 2 (CMDS)


State 67

   43 ATR: TK_ID '[' E ']' . '=' E
   44    | TK_ID '[' E ']' . '[' E ']' '=' E
   45    | TK_ID '[' E ']' . '[' E ']' '[' E ']' '=' E

    '['  shift, and go to state 89
    '='  shift, and go to state 90


State 68

   13 VAR: TK_ID '[' CINT . ']'
   14    | TK_ID '[' CINT . ']' '[' CINT ']'
   15    | TK_ID '[' CINT . ']' '[' CINT ']' '[' CINT ']'

    ']'  shift, and go to state 91


State 69

   11 VARS: VARS ',' VAR .

    $default  reduce using rule 11 (VARS)


State 70

   19 ENTRADA_EXT: TK_SHIFTR TK_ID '[' . E ']'
   20            | TK_SHIFTR TK_ID '[' . E ']' '[' E ']'
   21            | TK_SHIFTR TK_ID '[' . E ']' '[' E ']' '[' E ']'
   23            | TK_SHIFTR TK_ID '[' . E ']' ENTRADA_EXT
   24            | TK_SHIFTR TK_ID '[' . E ']' '[' E ']' ENTRADA_EXT
   25            | TK_SHIFTR TK_ID '[' . E ']' '[' E ']' '[' E ']' ENTRADA_EXT

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 92
    V  go to state 36


State 71

   22 ENTRADA_EXT: TK_SHIFTR TK_ID ENTRADA_EXT .

    $default  reduce using rule 22 (ENTRADA_EXT)


State 72

   30 SAIDA_EXT: TK_SHIFTL TK_STR SAIDA_EXT .

    $default  reduce using rule 30 (SAIDA_EXT)


State 73

   32 SAIDA_EXT: TK_SHIFTL TK_ENDL SAIDA_EXT .

    $default  reduce using rule 32 (SAIDA_EXT)


State 74

   31 SAIDA_EXT: TK_SHIFTL E SAIDA_EXT .

    $default  reduce using rule 31 (SAIDA_EXT)


State 75

   33 FOR: TK_FOR TK_ID TK_IN '[' . E TK_2PT E ']' BLK
   34    | TK_FOR TK_ID TK_IN '[' . E TK_2PT E ']' CMD

    CINT       shift, and go to state 26
    CDOUBLE    shift, and go to state 27
    TK_ID      shift, and go to state 28
    TK_TRUE    shift, and go to state 29
    TK_FALSE   shift, and go to state 30
    TK_STR     shift, and go to state 31
    CCHAR      shift, and go to state 32
    TK_UN_NOT  shift, and go to state 33
    '('        shift, and go to state 34

    E  go to state 93
    V  go to state 36


State 76

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E
   56 V: TK_ID '[' E . ']'
   57  | TK_ID '[' E . ']' '[' E ']'
   58  | TK_ID '[' E . ']' '[' E ']' '[' E ']'

    TK_CMP      shift, and go to state 56
    TK_CMP_OR   shift, and go to state 57
    TK_CMP_AND  shift, and go to state 58
    '+'         shift, and go to state 59
    '-'         shift, and go to state 60
    '*'         shift, and go to state 61
    '/'         shift, and go to state 62
    '%'         shift, and go to state 63
    ']'         shift, and go to state 94


State 77

   66 V: '(' E ')' .

    $default  reduce using rule 66 (V)


State 78

   38 IF: TK_IF E TK_THEN CMD .

    $default  reduce using rule 38 (IF)


State 79

   37 IF: TK_IF E TK_THEN BLK . ';' error
   39   | TK_IF E TK_THEN BLK . TK_ELSE BLK

    TK_ELSE  shift, and go to state 95
    ';'      shift, and go to state 96


State 80

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   52  | E TK_CMP E .
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E

    '+'  shift, and go to state 59
    '-'  shift, and go to state 60
    '*'  shift, and go to state 61
    '/'  shift, and go to state 62
    '%'  shift, and go to state 63

    $default  reduce using rule 52 (E)


State 81

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   54  | E . TK_CMP_OR E
   54  | E TK_CMP_OR E .

    TK_CMP  shift, and go to state 56
    '+'     shift, and go to state 59
    '-'     shift, and go to state 60
    '*'     shift, and go to state 61
    '/'     shift, and go to state 62
    '%'     shift, and go to state 63

    $default  reduce using rule 54 (E)


State 82

   46 E: E . '+' E
   47  | E . '-' E
   48  | E . '*' E
   49  | E . '/' E
   50  | E . '%' E
   52  | E . TK_CMP E
   53  | E . TK_CMP_AND E
   53  | E TK_CMP_AND E .
   54  | E . TK_CMP_OR E

    TK_CMP  shift, and go to state 56
    '+'     shift, and go to state 59
    '-'     shift, and go to state 60
    '*'     shift, and go to state 61
    '/'     shift, and go to state 62
    '%'     shift, and go to state 63
